# Tello-SDK-Android

./: README.md  build.gradle
app/: build.gradle  tutorial1.cpp
app/gst-build-armeabi-v7a/: gstreamer_android.c
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gstTelloVideo.c
app/src/main/java/com/duvitech/network/udp/: CommandThread.java  TelloMessageID.java  TelloPacket.java  UDPClient.java  UDPStatusServer.java  UDPVideoServer.java
app/src/main/java/com/duvitech/tello/: MainActivity.java
app/src/main/java/org/freedesktop/gstreamer/: GStreamerSurfaceView.java
app/src/main/java/org/freedesktop/gstreamer/androidmedia/: GstAhcCallback.java  GstAhsCallback.java
app/src/main/jniLibs/armeabi-v7a/: gstreamer_android.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
